--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -1,26 +1,12 @@
 ---
 import { Section } from "@app/layouts";
-
-import { ContactDialog } from "./components/contact-dialog";
-
-import { Icon } from "astro-icon/components";
-import MyTime from "./components/my-time.svelte";
-import { Link } from "@components/base";
-
-import DynamicClock from "./components/dynamic-clock.svelte";
-
-import { education } from "./lib/data";
 import { getTranslations } from "@modules/i18n";
 
-import { socials } from "@lib/data/socials";
-import Picture from "astro/components/Picture.astro";
+import AtWork from "./components/at-work.astro";
+import Education from "./components/education.astro";
+import PersonalSide from "./components/personal-side.astro";
 
 const { locale } = Astro.locals;
-const formatter = new Intl.DateTimeFormat(locale, {
-  month: "long",
-  year: "numeric",
-});
-
 const translations = getTranslations(locale);
 const t = translations.sections.about;
 ---
@@ -29,452 +15,16 @@ const t = translations.sections.about;
   order={4}
   id={t.id}
   title={t.title}
-  class:list={[
-    "mx-auto max-w-screen-xl px-4",
-    "sm:px-8",
-    "2xl:px-0",
-    "[&>h2]:pl-3 sm:[&>h2]:pl-6",
-  ]}
+  class="mx-auto max-w-screen-xl px-4 xs:px-8 [&>h2]:mx-12"
 >
   <div
-    data-bento-about
     class:list={[
-      "mb-24 grid grid-cols-10 justify-center gap-4",
-      "*:overflow-clip *:rounded-xl *:border *:bg-background",
+      "my-24 grid grid-cols-10 justify-center gap-6",
+      "*:overflow-clip *:rounded-xl *:border *:bg-background *:p-8",
     ]}
   >
-    <article
-      class:list={[
-        "col-span-10 col-start-1 flex flex-col p-6 pb-8",
-        "md:px-10 md:py-8",
-        "lg:flex-row",
-      ]}
-    >
-      <div class="w-full lg:max-w-[60ch]">
-        <header
-          class="flex items-center gap-4 text-balance font-header text-xl font-bold"
-        >
-          <picture>
-            <source
-              srcset="/images/emojis/hand/hand.webp"
-              type="image/webp"
-            />
-            <source
-              srcset="/images/emojis/hand/hand.png"
-              type="image/png"
-            />
-            <source
-              srcset="/images/emojis/hand/hand.avif"
-              type="image/avif"
-            />
-            <img
-              src="/images/emojis/hand/hand.gif"
-              alt="Waving Hand"
-              width={64}
-              height={64}
-              decoding="async"
-              loading="lazy"
-              class="size-[1.5em]"
-            />
-          </picture>
-          <h3 class="mt-3">Hey There!</h3>
-        </header>
-
-        <p
-          class="mt-8 text-pretty text-base text-foreground/80"
-          set:html={t.introduction[0]}
-        />
-
-        <p
-          class="mt-6 text-pretty text-base text-foreground/80"
-          set:html={t.introduction[1]}
-        />
-      </div>
-
-      <div
-        class:list={[
-          "relative hidden h-44",
-          "xs:h-52",
-          "lg:h-full lg:grow",
-          "[@media(width>=350px)]:block",
-        ]}
-      >
-        <div
-          class="absolute inset-0 size-full text-center font-header font-medium text-accent-foreground/80 text-2xs"
-        >
-          <div
-            class:list={[
-              "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 animate-float",
-              "left-[12.5%] top-[40%] min-w-[80px] max-w-[4.5em] rotate-[75deg]",
-              "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-              "md:max-w-[10em]",
-              "lg:left-[25%] lg:top-[20%] lg:max-w-[8.5em]",
-              "xl:left-[18%] xl:top-[25%] xl:max-w-[10em]",
-            ]}
-          >
-            <picture>
-              <source
-                srcset="/images/emojis/pizza/pizza.avif"
-                type="image/avif"
-              />
-              <source
-                srcset="/images/emojis/pizza/pizza.webp"
-                type="image/webp"
-              />
-              <img
-                src="/images/emojis/pizza/pizza.png"
-                alt="Pizza"
-                width={142}
-                height={142}
-                decoding="async"
-                loading="lazy"
-              />
-            </picture>
-
-            <p
-              class:list={[
-                "absolute bottom-1/4 left-0 -z-10 w-full min-w-max translate-x-1/2 -rotate-90 rounded-full border",
-                "bg-[#1d1b1b] px-[1em] py-[0.5em]",
-                "xs:bottom-1/3 xs:text-xs",
-              ]}
-            >
-              <span>
-                <Icon
-                  class="mx-px mb-px inline size-[1.15em]"
-                  name="heart"
-                  aria-label="love"
-                />
-              </span>
-              <span class="ml-0.5"> Pizza </span>
-            </p>
-          </div>
-
-          <div
-            class:list={[
-              "absolute left-1/2 top-[60%] aspect-square w-1/4 min-w-[80px] max-w-[4.5em] -translate-x-1/2 -translate-y-1/2",
-              "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-              "md:max-w-[10em]",
-              "lg:top-[70%] lg:max-w-[8.5em]",
-              "xl:max-w-[10em]",
-            ]}
-          >
-            <picture>
-              <source
-                srcset="/images/emojis/dog/dog.avif"
-                type="image/avif"
-              />
-              <source
-                srcset="/images/emojis/dog/dog.webp"
-                type="image/webp"
-              />
-              <source
-                srcset="/images/emojis/dog/dog.png"
-                type="image/png"
-              />
-              <img
-                src="/images/emojis/dog/dog.gif"
-                alt="Dog"
-                width={116}
-                height={116}
-                decoding="async"
-                loading="lazy"
-              />
-            </picture>
-
-            <p
-              class:list={[
-                "absolute -bottom-6 z-10 w-full min-w-max -translate-x-1/2 rounded-full border",
-                "left-[55%] bg-[#1d1b1b] px-[1em] py-[0.5em]",
-                "xs:text-xs",
-              ]}
-            >
-              <span>
-                <Icon
-                  class="mx-px mb-px inline size-[1.15em]"
-                  name="heart"
-                  aria-label="love"
-                />
-              </span>
-              <span class="ml-0.5"> Dogs </span>
-            </p>
-          </div>
-
-          <div
-            class:list={[
-              "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 rotate-12 animate-float animate-delay-1000",
-              "left-[90%] top-[35%] min-w-[80px] max-w-[4.5em]",
-              "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-              "md:max-w-[10em]",
-              "lg:top-[30%] lg:max-w-[8.5em]",
-              "xl:left-[85%] xl:max-w-[10em]",
-            ]}
-          >
-            <picture>
-              <source
-                srcset="/images/emojis/gamepad/gamepad.avif"
-                type="image/avif"
-              />
-              <source
-                srcset="/images/emojis/gamepad/gamepad.webp"
-                type="image/webp"
-              />
-              <img
-                src="/images/emojis/gamepad/gamepad.png"
-                alt="Gamepad"
-                width={138}
-                height={138}
-                decoding="async"
-                loading="lazy"
-              />
-            </picture>
-
-            <p
-              class:list={[
-                "absolute -bottom-6 left-1/2 -z-10 w-full min-w-max -translate-x-1/2 rounded-full border",
-                "bg-[#1d1b1b] px-[1em] py-[0.5em]",
-                "xs:text-xs",
-              ]}
-            >
-              <span>
-                <Icon
-                  class="mx-px mb-px inline size-[1.15em]"
-                  name="heart"
-                  aria-label="love"
-                />
-              </span>
-              <span class="ml-0.5"> Games </span>
-            </p>
-          </div>
-        </div>
-      </div>
-    </article>
-
-    <article
-      class:list={[
-        "relative col-span-10 col-start-1 row-start-6 flex aspect-square min-h-[413px] w-full items-end justify-center p-5",
-        "sm:max-h-[420px]",
-        "md:col-span-5 md:col-start-1 md:!row-start-4 md:aspect-auto md:max-h-none md:px-8 md:py-10",
-        "lg:col-span-4 lg:col-start-1 lg:!row-start-4",
-        "xl:col-span-3 xl:col-start-5 xl:row-span-2 xl:!row-start-2 xl:aspect-square xl:py-6",
-        "[@media(width>=600px)]:row-start-5",
-      ]}
-    >
-      <div
-        class:list={[
-          "absolute inset-0 top-1/2 z-20 h-1/2 w-full gradient-mask-t-50",
-          "lg:gradient-mask-t-60",
-        ]}
-      >
-      </div>
-
-      <footer class="z-30 w-full">
-        <ContactDialog client:visible={{ rootMargin: "20%" }} />
-      </footer>
-    </article>
-
-    <article
-      class:list={[
-        "col-span-10 col-start-1 row-start-5 p-6",
-        "md:col-span-5 md:!col-start-1 md:!row-start-3 md:row-end-4 md:px-10 md:py-6",
-        "lg:!col-span-4 lg:col-start-4 lg:!row-start-3 lg:row-end-4",
-        "xl:!col-span-3 xl:col-start-8 xl:!row-start-2",
-        "[@media(width>=600px)]:col-span-5 [@media(width>=600px)]:col-start-6 [@media(width>=600px)]:row-start-4",
-      ]}
-    >
-      <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <DynamicClock
-          class="size-[1.2em]"
-          client:idle
-        />
-        <h3 class="mt-1.5">Time</h3>
-      </header>
-
-      <MyTime
-        class="size-full"
-        locale={Astro.locals.locale}
-        client:load
-      />
-    </article>
-
-    <article
-      class:list={[
-        "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
-        "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
-        "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
-        "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
-        "[@media(width>=600px)]:col-span-5",
-      ]}
-    >
-      <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <picture>
-          <source
-            srcset="/images/emojis/globe/globe.avif"
-            type="image/avif"
-          />
-          <source
-            srcset="/images/emojis/globe/globe.webp"
-            type="image/webp"
-          />
-          <img
-            src="/images/emojis/globe/globe.png"
-            alt="Globe"
-            width={64}
-            height={64}
-            decoding="async"
-            loading="lazy"
-            class="size-[1.2em]"
-          />
-        </picture>
-        <h3 class="mt-1.5">Links</h3>
-      </header>
-
-      <ul
-        data-socials
-        class:list={[
-          "mt-6 grid grow grid-cols-4 grid-rows-2 gap-y-3",
-          "md:grid-cols-3 md:grid-rows-3 md:gap-y-0",
-          "lg:grid-cols-4 lg:grid-rows-2",
-          "xl:gap-y-2",
-        ]}
-      >
-        {
-          socials.map(({ href, i18nKey, iconKey }, index) => {
-            const translatedLabel = translations.socials[i18nKey];
-            const position = index > 3 ? "bottom" : "top";
-
-            return (
-              <li
-                class:list={[
-                  "size-fit self-center justify-self-center rounded-lg bg-background text-foreground transition duration-200",
-                  "hover:bg-accent hover:text-accent-foreground hover:brightness-110",
-                ]}
-              >
-                <Link
-                  {href}
-                  label={`${translatedLabel}`}
-                  targetBlank
-                  withTooltip={{
-                    content: `${translatedLabel}`,
-                    placement: position,
-                  }}
-                >
-                  <Icon
-                    name={iconKey}
-                    class="box-content size-7 p-2 text-current md:size-8 lg:size-9"
-                  />
-                </Link>
-              </li>
-            );
-          })
-        }
-      </ul>
-    </article>
-
-    <article
-      class:list={[
-        "relative col-span-10 col-start-1 row-start-3 p-6 pb-8",
-        "md:col-span-5 md:col-start-6 md:row-span-2 md:row-start-2 md:px-10 md:py-8",
-        "lg:col-span-6 lg:col-start-5 lg:row-span-1 lg:row-start-4",
-        "xl:!col-span-6 xl:!col-start-5 xl:row-span-2",
-      ]}
-    >
-      <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <picture>
-          <source
-            srcset="/images/emojis/graduation-cap/graduation-cap.avif"
-            type="image/avif"
-          />
-          <source
-            srcset="/images/emojis/graduation-cap/graduation-cap.webp"
-            type="image/webp"
-          />
-          <img
-            src="/images/emojis/graduation-cap/graduation-cap.png"
-            alt="Graduation Cap"
-            width={64}
-            height={64}
-            decoding="async"
-            loading="lazy"
-            class="size-[1.5em]"
-          />
-        </picture>
-
-        <h3 class="mt-3">Education</h3>
-      </header>
-
-      <ul
-        class="mt-6"
-        aria-label="My Education"
-      >
-        {
-          education.map((item) => {
-            const { startDate, endDate } = item;
-            const start = formatter.format(startDate);
-            const end = formatter.format(endDate);
-
-            return (
-              <li>
-                <Link
-                  href={item.url}
-                  label={`Official site of my university`}
-                  class="text-balance font-sans text-lg font-bold transition duration-200 group-focus-within:text-primary lg:hover:text-primary"
-                  targetBlank
-                  withExternalLinkArrow
-                >
-                  <span>{item.title(locale)}</span>
-                </Link>
-
-                <div class="mt-2 text-balance text-base font-semibold text-muted-foreground/80 transition-colors duration-200">
-                  <span>{item.location(locale)}</span>
-                  <span class="opacity-50">{" | "}</span>
-                  <span aria-label="">
-                    <time
-                      datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
-                    >
-                      {start}
-                    </time>
-                    {" - "}
-                    <time
-                      datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
-                    >
-                      {end}
-                    </time>
-                  </span>
-                </div>
-
-                <p
-                  data-education-description
-                  class="mt-8 max-w-[800px] text-pretty text-base text-foreground/80"
-                  set:html={item.description(locale)}
-                />
-              </li>
-            );
-          })
-        }
-      </ul>
-    </article>
+    <AtWork class="relative col-span-6 col-start-1" />
+    <PersonalSide class="col-span-4 col-start-7 row-span-2" />
+    <Education class="col-span-6 col-start-1" />
   </div>
 </Section>
-
-<style>
-  :global([data-education-description] a) {
-    text-decoration: underline;
-    text-decoration-color: theme("colors.primary.DEFAULT");
-    text-underline-offset: 0.15em;
-  }
-
-  [data-carousel] {
-    animation: carousel-slide calc(var(--items) * 3s) steps(var(--items))
-      infinite;
-  }
-
-  @keyframes carousel-slide {
-    0% {
-      transform: translateX(0);
-    }
-
-    100% {
-      transform: translateX(calc(var(--items) * -100%));
-    }
-  }
-</style>
