--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -82,15 +82,15 @@ const t = getTranslations(locale);
     <link
       rel="mask-icon"
       href="/safari-pinned-tab.svg"
-      color="#0c0a09"
+      color="#3fa5ff"
     />
     <meta
       name="msapplication-TileColor"
-      content="#0c0a09"
+      content="#ffffff"
     />
     <meta
       name="theme-color"
-      content="#0c0a09"
+      content="#ffffff"
     />
 
     <script
