--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -15,7 +15,7 @@ const t = translations.sections.about;
   order={4}
   id={t.id}
   title={t.title}
-  class="mx-auto max-w-screen-xl px-4 xs:px-8 [&>h2]:mx-12"
+  class="mx-auto max-w-screen-xl px-4 xs:px-8 xl:[&>h2]:mx-12"
 >
   <div
     class:list={[
@@ -23,8 +23,10 @@ const t = translations.sections.about;
       "*:overflow-clip *:rounded-xl *:border *:bg-background *:p-8",
     ]}
   >
-    <AtWork class="relative col-span-6 col-start-1" />
-    <PersonalSide class="col-span-4 col-start-7 row-span-2" />
-    <Education class="col-span-6 col-start-1" />
+    <AtWork class="relative col-span-10 col-start-1 lg:col-span-6" />
+    <PersonalSide
+      class="col-span-10 col-start-1 lg:col-span-4 lg:col-start-7 lg:row-span-2"
+    />
+    <Education class="col-span-10 col-start-1 lg:col-span-6" />
   </div>
 </Section>
