fix: wrong spacing on hero headline

--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -26,7 +26,7 @@ const t = translations.sections.hero;
       </h1>
 
       <p
-        class="mt-4 block min-h-[2lh] text-lg font-bold text-foreground/50"
+        class="mt-4 block text-2xl font-bold text-foreground/50"
         set:html={t.headline.content}
       />
     </div>
@@ -45,7 +45,7 @@ const t = translations.sections.hero;
 
   <div>
     <p
-      class="mt-4 max-w-[58ch] text-balance text-left text-base text-foreground/65 xs:text-lg"
+      class="mt-12 max-w-[58ch] text-balance text-left text-base text-foreground/65 xs:text-lg"
       set:html={t.introduction}
       data-hero-p
     />
