--- a/source/layouts/section.astro
+++ b/source/layouts/section.astro
@@ -106,9 +106,10 @@ const { order = 1, title, ...props } = Astro.props;
   data-observed-section={order}
 >
   <h2
-    class="my-12 ml-2 w-fit text-pretty text-3xl font-bold opacity-85 sm:ml-0"
+    class="my-12 ml-2 inline-flex w-full items-center text-pretty text-3xl font-bold opacity-85 sm:ml-0"
   >
-    {title}
+    <span>{title}</span>
+    <span class="ml-[0.6em] mt-1 h-0.5 grow translate-y-full bg-muted"></span>
   </h2>
 
   <slot />
@@ -134,7 +135,7 @@ const { order = 1, title, ...props } = Astro.props;
     margin-right: 0.5em;
   }
 
-  h2::after {
+  /* h2::after {
     content: "";
     width: 120%;
     height: 2px;
@@ -145,12 +146,12 @@ const { order = 1, title, ...props } = Astro.props;
     display: none;
     margin-left: 0.6em;
     background-color: theme("colors.muted.DEFAULT");
-  }
+  } */
 
-  @media screen(sm) {
+  /*  @media screen(sm) {
     h2::after {
       display: inline-block;
       text-align: left;
     }
-  }
+  } */
 </style>
