--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -15,7 +15,7 @@ const t = translations.sections.about;
   order={4}
   id={t.id}
   title={t.title}
-  class="mx-auto max-w-screen-xl px-4 xs:px-8 xl:[&>h2]:mx-12"
+  class="mx-auto max-w-screen-xl px-4 xs:px-8"
 >
   <div
     class:list={[
