--- a/source/sections/contact/content.astro
+++ b/source/sections/contact/content.astro
@@ -1,6 +1,22 @@
 ---
+import { Picture } from "astro:assets";
+
 import { Section } from "@app/layouts";
+import { ContactForm } from "@modules/contact";
 import { getTranslations } from "@modules/i18n";
+
+import memoji from "./assets/memoji.png";
+import {
+  discord,
+  email,
+  github,
+  linkedIn,
+  xTwitter,
+} from "@app/lib/data/socials";
+import { Badge, Link } from "@app/components/base";
+import { Icon } from "astro-icon/components";
+import ParticleCanvas from "@app/components/particles/particle-canvas.astro";
+import MyTime from "../about/components/my-time.svelte";
 
 const { locale } = Astro.locals;
 const translations = getTranslations(locale);
@@ -9,8 +25,123 @@ const t = translations.sections.contact;
 
 <Section
   id={t.id}
-  class="z-0 mx-auto max-w-screen-lg px-4 xs:px-6"
-  aria-label={t.name}
+  class="z-0 mx-auto max-w-screen-xl px-4 pb-24 xs:px-6"
   title={t.title}
   order={4}
-/>
+>
+  <div class="mx-8 grid grid-cols-[auto,1fr]">
+    <div
+      class="mx-auto flex w-fit max-w-lg items-center justify-center text-balance font-header"
+    >
+      <div class="grid h-full grid-rows-[1fr,auto,1fr] pr-3">
+        <header class="self-center">
+          <p class="text-xl font-medium">
+            <span> Hey there! thank you for </span>
+            <span class="text-primary">your time!</span>
+          </p>
+
+          <p class="mt-8 text-base text-foreground/60">
+            <span>If you want to</span>
+            <span class="text-primary">get in touch</span>,
+            <span>
+              feel free to send me a message using any of these channels:
+            </span>
+          </p>
+
+          <ul class="mt-8 flex gap-x-2">
+            {
+              [linkedIn, xTwitter, discord, email].map(
+                ({ href, i18nKey, iconKey }) => {
+                  const translatedLabel = translations.socials[i18nKey];
+                  return (
+                    <li
+                      class:list={[
+                        "rounded-lg text-foreground/80 transition duration-200",
+                        "hover:bg-accent hover:text-accent-foreground/80",
+                      ]}
+                    >
+                      <Link
+                        {href}
+                        label={`${translatedLabel}`}
+                        targetBlank
+                        withTooltip={{
+                          content: `${translatedLabel}`,
+                          placement: "bottom",
+                        }}
+                      >
+                        <Icon
+                          name={iconKey}
+                          class="box-content size-6 p-2 text-current sm:size-7 md:size-8"
+                        />
+                      </Link>
+                    </li>
+                  );
+                },
+              )
+            }
+          </ul>
+        </header>
+
+        <div class="inline-block h-0.5 w-full bg-muted"></div>
+
+        <div class="self-center">
+          <p class="text-xl font-medium">
+            <span> Time zones are </span>
+            <span class="text-primary">no barrier!</span>
+          </p>
+
+          <p class="mt-8 text-base text-foreground/60">
+            <span>You can contact me anytime, but </span>
+          </p>
+
+          <div class="w-fit">
+            <MyTime
+              class="justify-start font-sans"
+              client:visible={{ rootMargin: "30%" }}
+            />
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="inline-flex h-full flex-col items-center justify-center gap-6"
+      >
+        <span class="h-1/2 w-0.5 bg-muted"></span>
+        <span class="px-3 text-sm font-black text-muted-foreground">OR</span>
+        <span class="h-1/2 w-0.5 bg-muted"></span>
+      </div>
+    </div>
+
+    <div class="relative flex flex-col gap-y-8 py-6">
+      <p
+        class="mx-auto max-w-prose text-balance text-center font-header text-base font-medium tracking-wide text-foreground/80"
+      >
+        <span> Fill this form and I will get back to you </span>
+        <span class="text-primary">as soon as possible</span>.
+      </p>
+
+      <div class="absolute inset-x-10 inset-y-20 -z-10">
+        <ParticleCanvas
+          quantity={160}
+          color="rgb(250, 204, 21)"
+        />
+      </div>
+
+      <ContactForm
+        data-contact-form
+        className="mx-auto my-8 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md"
+        client:visible={{ rootMargin: "30%" }}
+      />
+      <small
+        class="z-10 -mt-2 text-center text-xs font-semibold text-muted-foreground"
+        >I don't retain nor share any of your data.</small
+      >
+    </div>
+  </div>
+</Section>
+
+<style>
+  [data-contact-form] {
+    box-shadow: 0px 0px 100px -45px theme("colors.primary.DEFAULT");
+  }
+</style>
