--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -16,6 +16,7 @@ const t = translations.sections.hero;
 
 <section class="mx-auto max-w-screen-lg content-center px-4 xs:px-6">
   <header
+    data-aos="fade-up"
     class="relative flex flex-row-reverse flex-wrap-reverse justify-end sm:flex-nowrap [@media(width>=37rem)]:flex-row [@media(width>=37rem)]:justify-between"
   >
     <div>
