--- a/source/sections/about/components/at-work.astro
+++ b/source/sections/about/components/at-work.astro
@@ -32,16 +32,18 @@ const t = translations.sections.about.bento.atWork;
   />
 
   <p
-    class="mb-64 mt-6 text-pretty text-base text-foreground/80"
+    class="mb-2 mt-6 text-pretty text-base text-foreground/80 fold:mb-4 sm:mb-2"
     set:html={t.text[1]}
   />
 
-  <div class="absolute inset-x-0 -bottom-32 w-full overflow-hidden">
+  <div
+    class="relative overflow-hidden p-[20%] [@media(850px<=width<=920px)]:p-[18%] [@media(921px<=width<=1024px)]:p-[17%]"
+  >
     <Picture
       src={approach}
       alt={t.approachAlt}
       formats={["avif", "webp", "png"]}
-      class="opacity-50"
+      class="absolute inset-0 mx-auto w-fit opacity-50 lg:mt-2 xl:mt-0"
       data-mask
     />
   </div>
