--- a/source/sections/about/components/education.astro
+++ b/source/sections/about/components/education.astro
@@ -29,7 +29,7 @@ const formatter = new Intl.DateTimeFormat(locale, {
       class="size-[1.5em]"
     />
 
-    <h3 class="mt-3 capitalize">{t.title}</h3>
+    <h3 class="mt-2 capitalize">{t.title}</h3>
   </header>
 
   <ul class="mt-6">
@@ -71,7 +71,7 @@ const formatter = new Intl.DateTimeFormat(locale, {
 
             <p
               data-education-description
-              class="mt-8 max-w-[60ch] text-pretty text-base text-foreground/80"
+              class="mt-8 text-pretty text-base text-foreground/80 lg:max-w-[60ch]"
               set:html={item.description(locale)}
             />
           </li>
