--- a/source/sections/about/components/personal-side.astro
+++ b/source/sections/about/components/personal-side.astro
@@ -44,63 +44,56 @@ const t = translations.sections.about.bento.aboutMe;
     <h3 class="mt-3 capitalize">My personal side</h3>
   </header>
 
-  <div class="flex h-full flex-col">
-    <div class="h-[60%]">
-      <p
-        class="mt-8 text-pretty text-base text-foreground/80"
-        set:html={t.text[2]}
-      />
+  <div>
+    <p
+      class="mt-8 text-pretty text-base text-foreground/80"
+      set:html={t.text[2]}
+    />
 
-      <p
-        class="mt-6 text-pretty text-base text-foreground/80"
-        set:html={t.text[3]}
-      />
-    </div>
+    <p
+      class="mt-6 text-pretty text-base text-foreground/80"
+      set:html={t.text[3]}
+    />
+  </div>
 
-    <div class="relative mb-8 h-[40%]">
+  <!-- class:list={[
+        "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 animate-float",
+        "left-[12.5%] top-[40%] min-w-[80px] max-w-[4.5em] rotate-[75deg]",
+        "xs:min-w-[5.5em] xs:max-w-[7.5em]",
+        "md:max-w-[10em]",
+        "lg:left-[25%] lg:top-[20%] lg:max-w-[8.5em]",
+        "xl:left-[18%] xl:top-[25%] xl:max-w-[10em]",
+      ]} -->
+
+  <div class="relative mt-4 hidden grid-cols-3 grid-rows-1 p-[15%] xs:grid">
+    <div
+      class="absolute inset-0 grid grid-cols-3 grid-rows-1 gap-8 p-[3%] px-4"
+    >
       <div
-        class:list={[
-          "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 animate-float",
-          "left-[12.5%] top-[40%] min-w-[80px] max-w-[4.5em] rotate-[75deg]",
-          "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-          "md:max-w-[10em]",
-          "lg:left-[25%] lg:top-[20%] lg:max-w-[8.5em]",
-          "xl:left-[18%] xl:top-[25%] xl:max-w-[10em]",
-        ]}
+        class="relative aspect-square max-h-full -rotate-12 animate-float justify-self-center"
       >
         <Picture
           src={pizzaEmoji}
-          alt={"Pizza"}
+          alt="Pizza"
           formats={["avif", "webp", "png"]}
+          class="size-full"
         />
 
-        <p
-          class:list={[
-            "absolute bottom-1/4 left-0 -z-10 w-full min-w-max translate-x-1/2 -rotate-90 rounded-full border text-center",
-            "bg-[#1d1b1b] px-[1em] py-[0.5em]",
-            "xs:bottom-1/3 xs:text-xs",
-          ]}
+        <div
+          class="absolute inset-x-0 left-1/2 top-full -z-10 -mt-1 min-h-fit w-full min-w-max -translate-x-1/2 -translate-y-1/2 rounded-lg border bg-[#1d1b1b] px-[1.2em] py-[0.2em] text-center xs:text-xs sm:text-sm"
         >
-          <span>
+          <p class="mt-2 inline-flex items-center gap-x-2">
             <Icon
-              class="mx-px mb-px inline size-[1.15em]"
+              class="size-[1.15em]"
               name="heart"
             />
             <span class="sr-only">{translations.misc.loveIconSr}</span>
-          </span>
-          <span class="ml-0.5"> Pizza </span>
-        </p>
+            <span class="font-medium"> Pizza </span>
+          </p>
+        </div>
       </div>
 
-      <div
-        class:list={[
-          "absolute left-1/2 top-[60%] aspect-square w-1/4 min-w-[80px] max-w-[4.5em] -translate-x-1/2 -translate-y-1/2",
-          "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-          "md:max-w-[10em]",
-          "lg:top-[70%] lg:max-w-[8.5em]",
-          "xl:max-w-[10em]",
-        ]}
-      >
+      <div class="relative aspect-square max-h-full justify-self-center">
         <picture>
           <source
             srcset="/images/emojis/dog/dog.avif"
@@ -117,64 +110,144 @@ const t = translations.sections.about.bento.aboutMe;
           <img
             src="/images/emojis/dog/dog.gif"
             alt={t.dogEmojiAlt}
-            width={116}
-            height={116}
+            width={256}
+            height={256}
             decoding="async"
             loading="lazy"
           />
         </picture>
 
         <p
-          class:list={[
-            "absolute -bottom-6 z-10 w-full min-w-max -translate-x-1/2 rounded-full border text-center",
-            "left-[55%] bg-[#1d1b1b] px-[1em] py-[0.5em]",
-            "xs:text-xs",
-          ]}
+          class="absolute inset-x-0 left-[5%] top-[94%] z-10 mx-auto min-h-fit w-full min-w-max rounded-full border bg-[#1d1b1b] py-[0.2em] text-center text-3xs xs:text-xs sm:text-sm"
         >
-          <span>
+          <span class="mt-1 inline-flex items-center gap-x-2">
             <Icon
-              class="mx-px mb-px inline size-[1.15em]"
+              class="size-[1.15em]"
               name="heart"
             />
             <span class="sr-only">{translations.misc.loveIconSr}</span>
+            <span class="font-medium"> Dogs </span>
           </span>
-          <span class="ml-0.5"> {t.dogEmojiText} </span>
         </p>
       </div>
 
       <div
-        class:list={[
-          "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 rotate-12 animate-float animate-delay-1000",
-          "left-[90%] top-[35%] min-w-[80px] max-w-[4.5em]",
-          "xs:min-w-[5.5em] xs:max-w-[7.5em]",
-          "md:max-w-[10em]",
-          "lg:top-[30%] lg:max-w-[8.5em]",
-          "xl:left-[85%] xl:max-w-[10em]",
-        ]}
+        class="relative aspect-square max-h-full rotate-12 animate-float justify-self-center"
       >
         <Picture
           src={gamepadEmoji}
-          alt={t.gamepadEmojiAlt}
+          alt="Gamepad"
           formats={["avif", "webp", "png"]}
+          class="size-full"
         />
 
         <p
-          class:list={[
-            "absolute -bottom-6 left-1/2 -z-10 w-full min-w-max -translate-x-1/2 rounded-full border text-center",
-            "bg-[#1d1b1b] px-[1em] py-[0.5em]",
-            "xs:text-xs",
-          ]}
+          class="absolute inset-x-0 top-full -z-10 mx-auto min-h-fit w-full min-w-max -translate-y-1/2 rounded-full border bg-[#1d1b1b] py-[0.2em] text-center xs:text-xs sm:text-sm"
         >
-          <span>
+          <span class="mt-1 inline-flex items-center gap-x-2">
             <Icon
-              class="mx-px mb-px inline size-[1.15em]"
+              class="size-[1.15em]"
               name="heart"
             />
             <span class="sr-only">{translations.misc.loveIconSr}</span>
+            <span class="font-medium"> Games </span>
           </span>
-          <span class="ml-0.5"> {t.gameEmojiText} </span>
         </p>
       </div>
     </div>
+
+    <!-- <div class="absolute inset-0 aspect-square max-h-full">
+      <Picture
+        src={pizzaEmoji}
+        alt="Pizza"
+        formats={["avif", "webp", "png"]}
+        class="inset-0 size-full"
+      />
+    </div> -->
+
+    <!-- <div
+      class:list={[
+        "absolute left-1/2 top-[60%] aspect-square w-1/4 min-w-[80px] max-w-[4.5em] -translate-x-1/2 -translate-y-1/2",
+        "xs:min-w-[5.5em] xs:max-w-[7.5em]",
+        "md:max-w-[10em]",
+        "lg:top-[70%] lg:max-w-[8.5em]",
+        "xl:max-w-[10em]",
+      ]}
+    >
+      <picture>
+        <source
+          srcset="/images/emojis/dog/dog.avif"
+          type="image/avif"
+        />
+        <source
+          srcset="/images/emojis/dog/dog.webp"
+          type="image/webp"
+        />
+        <source
+          srcset="/images/emojis/dog/dog.png"
+          type="image/png"
+        />
+        <img
+          src="/images/emojis/dog/dog.gif"
+          alt={t.dogEmojiAlt}
+          width={116}
+          height={116}
+          decoding="async"
+          loading="lazy"
+        />
+      </picture>
+
+      <p
+        class:list={[
+          "absolute -bottom-6 z-10 w-full min-w-max -translate-x-1/2 rounded-full border text-center",
+          "left-[55%] bg-[#1d1b1b] px-[1em] py-[0.5em]",
+          "xs:text-xs",
+        ]}
+      >
+        <span>
+          <Icon
+            class="mx-px mb-px inline size-[1.15em]"
+            name="heart"
+          />
+          <span class="sr-only">{translations.misc.loveIconSr}</span>
+        </span>
+        <span class="ml-0.5"> {t.dogEmojiText} </span>
+      </p>
+    </div>
+
+    <div
+      class:list={[
+        "absolute aspect-square w-1/4 -translate-x-1/2 -translate-y-1/2 rotate-12 animate-float animate-delay-1000",
+        "left-[90%] top-[35%] min-w-[80px] max-w-[4.5em]",
+        "xs:min-w-[5.5em] xs:max-w-[7.5em]",
+        "md:max-w-[10em]",
+        "lg:top-[30%] lg:max-w-[8.5em]",
+        "xl:left-[85%] xl:max-w-[10em]",
+      ]}
+    >
+      <Picture
+        src={gamepadEmoji}
+        alt={t.gamepadEmojiAlt}
+        formats={["avif", "webp", "png"]}
+      />
+
+      <p
+        class:list={[
+          "absolute -bottom-6 left-1/2 -z-10 w-full min-w-max -translate-x-1/2 rounded-full border text-center",
+          "bg-[#1d1b1b] px-[1em] py-[0.5em]",
+          "xs:text-xs",
+        ]}
+      >
+        <span>
+          <Icon
+            class="mx-px mb-px inline size-[1.15em]"
+            name="heart"
+          />
+          <span class="sr-only">{translations.misc.loveIconSr}</span>
+        </span>
+        <span class="ml-0.5"> {t.gameEmojiText} </span>
+      </p>
+    </div>
+  </div> -->
   </div>
 </article>
