--- a/source/sections/contact/content.astro
+++ b/source/sections/contact/content.astro
@@ -29,90 +29,99 @@ const t = translations.sections.contact;
   title={t.title}
   order={4}
 >
-  <div class="mx-8 grid grid-cols-[auto,1fr]">
+  <div class="contact-section-grid mx-4 xl:mx-8">
     <div
-      class="mx-auto flex w-fit max-w-lg items-center justify-center text-balance font-header"
+      class="grid-area-thanks text-balance px-8 text-center font-header xl:self-center xl:px-0 xl:text-left"
     >
-      <div class="grid h-full grid-rows-[1fr,auto,1fr] pr-3">
-        <header class="self-center">
-          <p class="text-xl font-medium">
-            <span> Hey there! thank you for </span>
-            <span class="text-primary">your time!</span>
-          </p>
+      <p class="text-xl font-medium">
+        <span> Hey there! thank you for </span>
+        <span class="text-primary">your time!</span>
+      </p>
 
-          <p class="mt-8 text-base text-foreground/60">
-            <span>If you want to</span>
-            <span class="text-primary">get in touch</span>,
-            <span>
-              feel free to send me a message using any of these channels:
-            </span>
-          </p>
+      <p class="mt-8 text-base text-foreground/60">
+        <span>If you want to</span>
+        <span class="text-primary">get in touch</span>,
+        <span>
+          feel free to send me a message using any of these channels:
+        </span>
+      </p>
 
-          <ul class="mt-8 flex gap-x-2">
-            {
-              [linkedIn, xTwitter, discord, email].map(
-                ({ href, i18nKey, iconKey }) => {
-                  const translatedLabel = translations.socials[i18nKey];
-                  return (
-                    <li
-                      class:list={[
-                        "rounded-lg text-foreground/80 transition duration-200",
-                        "hover:bg-accent hover:text-accent-foreground/80",
-                      ]}
-                    >
-                      <Link
-                        {href}
-                        label={`${translatedLabel}`}
-                        targetBlank
-                        withTooltip={{
-                          content: `${translatedLabel}`,
-                          placement: "bottom",
-                        }}
-                      >
-                        <Icon
-                          name={iconKey}
-                          class="box-content size-6 p-2 text-current sm:size-7 md:size-8"
-                        />
-                      </Link>
-                    </li>
-                  );
-                },
-              )
-            }
-          </ul>
-        </header>
-
-        <div class="inline-block h-0.5 w-full bg-muted"></div>
-
-        <div class="self-center">
-          <p class="text-xl font-medium">
-            <span> Time zones are </span>
-            <span class="text-primary">no barrier!</span>
-          </p>
-
-          <p class="mt-8 text-base text-foreground/60">
-            <span>You can contact me anytime, but </span>
-          </p>
-
-          <div class="w-fit">
-            <MyTime
-              class="justify-start font-sans"
-              client:visible={{ rootMargin: "30%" }}
-            />
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="inline-flex h-full flex-col items-center justify-center gap-6"
+      <ul
+        class="mt-8 flex w-full justify-center gap-x-2 xl:w-auto xl:justify-start"
       >
-        <span class="h-1/2 w-0.5 bg-muted"></span>
-        <span class="px-3 text-sm font-black text-muted-foreground">OR</span>
-        <span class="h-1/2 w-0.5 bg-muted"></span>
-      </div>
+        {
+          [linkedIn, xTwitter, discord, email].map(
+            ({ href, i18nKey, iconKey }) => {
+              const translatedLabel = translations.socials[i18nKey];
+              return (
+                <li
+                  class:list={[
+                    "rounded-lg text-foreground/80 transition duration-200",
+                    "hover:bg-accent hover:text-accent-foreground/80",
+                  ]}
+                >
+                  <Link
+                    {href}
+                    label={`${translatedLabel}`}
+                    targetBlank
+                    withTooltip={{
+                      content: `${translatedLabel}`,
+                      placement: "bottom",
+                    }}
+                  >
+                    <Icon
+                      name={iconKey}
+                      class="box-content size-6 p-2 text-current sm:size-7 md:size-8"
+                    />
+                  </Link>
+                </li>
+              );
+            },
+          )
+        }
+      </ul>
     </div>
 
-    <div class="relative flex flex-col gap-y-8 py-6">
+    <div
+      class="grid-area-divider inline-block h-0.5 w-full bg-muted md:h-full md:w-0.5 xl:h-0.5 xl:w-full"
+    >
+    </div>
+
+    <!-- <div
+      class="grid-area-time text-balance px-8 text-center font-header xl:self-center xl:px-0 xl:text-left"
+    >
+      <p class="text-xl font-medium">
+        <span> Time zones are </span>
+        <span class="text-primary">no barrier!</span>
+      </p>
+
+      <p class="mt-8 text-base text-foreground/60">
+        <span
+          >You can contact me anytime, but be aware that I may not be available.
+          Right now my time is:
+        </span>
+      </p>
+
+      <div class="mt-8 xl:w-fit">
+        <MyTime
+          class="justify-start font-sans"
+          client:visible={{ rootMargin: "30%" }}
+        />
+      </div>
+    </div> -->
+
+    <div
+      class="grid-area-or flex w-full items-center justify-center gap-6 xl:h-full xl:flex-col"
+    >
+      <span class="h-0.5 w-1/2 bg-muted xl:h-1/2 xl:w-0.5"></span>
+      <span
+        class="py-6 text-sm font-black text-muted-foreground xl:px-3 xl:py-0"
+        >OR</span
+      >
+      <span class="h-0.5 w-1/2 bg-muted xl:h-1/2 xl:w-0.5"></span>
+    </div>
+
+    <div class="grid-area-form relative flex flex-col gap-y-8 py-6">
       <p
         class="mx-auto max-w-prose text-balance text-center font-header text-base font-medium tracking-wide text-foreground/80"
       >
@@ -129,11 +138,11 @@ const t = translations.sections.contact;
 
       <ContactForm
         data-contact-form
-        className="mx-auto my-8 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md"
+        className="my-8 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md xs:mx-4 sm:mx-auto"
         client:visible={{ rootMargin: "30%" }}
       />
       <small
-        class="z-10 -mt-2 text-center text-xs font-semibold text-muted-foreground"
+        class="md:[.grid-areas-medium] z-10 -mt-2 text-center text-xs font-semibold text-muted-foreground"
         >I don't retain nor share any of your data.</small
       >
     </div>
@@ -143,5 +152,58 @@ const t = translations.sections.contact;
 <style>
   [data-contact-form] {
     box-shadow: 0px 0px 100px -45px theme("colors.primary.DEFAULT");
+  }
+
+  .grid-area-thanks {
+    grid-area: thanks;
+  }
+
+  .grid-area-divider {
+    grid-area: divider;
+  }
+
+  .grid-area-or {
+    grid-area: or;
+  }
+
+  .grid-area-form {
+    grid-area: form;
+  }
+
+  .grid-area-time {
+    grid-area: time;
+  }
+
+  .contact-section-grid {
+    display: grid;
+
+    grid-template-rows: repeat(5, auto);
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "thanks"
+      "or"
+      "form";
+  }
+
+  @media screen(md) {
+    .contact-section-grid {
+      grid-template-rows: repeat(3, auto);
+      grid-template-columns: 1fr auto 1fr;
+      grid-template-areas:
+        "thanks thanks thanks"
+        "or or or"
+        "form form form";
+    }
+  }
+
+  @media screen(xl) {
+    .contact-section-grid {
+      grid-template-rows: 1fr auto 1fr;
+      grid-template-columns: minmax(auto, theme("containers.md")) auto 1fr;
+      grid-template-areas:
+        "thanks or form"
+        "thanks or form"
+        "thanks or form";
+    }
   }
 </style>
